# statemachine-arduino

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt
src/statemachine/: CMakeLists.txt  statemachine.cpp  statemachine.h
statemachine/: CMakeLists.txt  statemachine.cpp  statemachine.h
test/: CMakeLists.txt  main.cpp  test_construction.cpp  test_construction.h  test_handle_event.cpp  test_handle_event.h  test_on_initialize.cpp  test_on_initialize.h  test_transition_to_deep_history.cpp  test_transition_to_deep_history.h  test_transition_to_history.cpp  test_transition_to_history.h  test_transition_to_state.cpp  test_transition_to_state.h
